# bookmark_rspc

./: .env  .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.mjs  Cargo.toml  README.md  bindings.ts  bun.lockb  components.json  index.html  package.json  postcss.config.cjs  tailwind.config.js  vite.config.ts
api/: Cargo.toml  Dockerfile
api/src/: main.rs  prisma.rs  trace_layer.rs  utils.rs
api/src/api/: collections.rs  links.rs  mod.rs  tags.rs  users.rs
client/: .env  bindings.ts  components.json  package.json  tailwind.config.js
client/src/: app.css  main.tsx  routeTree.gen.ts  store.ts  utils.ts
client/src/components/: calender_view.tsx  header.tsx  layout.css  layout.tsx  nav.css  nav.tsx  theme-provider.tsx
client/src/routes/: __root.tsx  collections.$collectionId.tsx  collections.index.tsx  index.tsx  tags.$tagId.tsx  tags.index.tsx  tags.tsx
client/src/utils/: rspc.ts
prisma/: schema.prisma
src/: main.tsx  routeTree.gen.ts  store.ts  utils.ts
src-expo/: app.json  package.json
src-expo/app/: _layout.tsx
src-expo/components/: SignInScreen.tsx
src-expo/utils/: rspc.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: aside_view.tsx  calendar_links.css  calendar_links.tsx  calendar_picker.tsx  calender_view.tsx  collapsible_links.css  collapsible_links.tsx  header.tsx  layout.css  layout.tsx  nav.css  nav.tsx
src/routes/: __root.tsx  collections.$collectionId.tsx  collections.index.tsx  collections.tsx  index.tsx  me.tsx  tags.index.tsx  tags.tsx
src/utils/: rspc.ts  useInfiniteLinkQuery.tsx
(+72 files in other folders)
