[package]
name = "test_bookmarks"
default-run = "test_bookmarks"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
publish = false

[dependencies]
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
axum = "0.6.18"
rspc = {  workspace = true }
tokio = { version = "1.29.1", features = ["full"] }
prisma-client-rust = { workspace = true }
dotenv = "0.15.0"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
specta = { version = "1.0.4", features = ["serde", "typescript"] }
svix = "1.5.2"
jsonwebtoken = "8.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "0.14.27"
